--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -95,4 +95,17 @@
     font-weight: bold;
 }
 
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
+.alert {
+    width: 340px;
+    margin-top: 22px;
+    padding: 1.75rem 1.25rem;
+    border: 1px solid transparent;
+    border-radius: .25rem;
+}
 
