--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <!--    html에서 cookie 인식-->
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/index.css">
-    <title>Study Community 로그인</title>
+    <title>SC | 로그인</title>
 </head>
 <body>
 <div id="login-form">
