--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/signup.css">
     <script src="/js/signup.js"></script>
-    <title>Study Community 회원가입</title>
+    <title>SC | 커뮤니티</title>
 </head>
 <body>
 <div id="signup-form">
