--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -35,9 +35,20 @@
     <div class="profile-content">
         <div class="myProfile">
             <p>내 프로필</p>
-            <button th:data-id="${id}" class="edit-profile-button" onclick="editProfile(this.getAttribute('data-id'))">수정</button>
+<!--            <button th:data-id="${id}" class="edit-profile-button" onclick="editProfile(this.getAttribute('data-id'))">-->
+<!--                수정-->
+<!--            </button>-->
             <label>닉네임</label>
-            <textarea id="edit-nickname" th:placeholder="${username}" cols="20" rows="1"></textarea>
+            <input id="edit-nickname" th:placeholder="${nickname}"></input>
+            <button th:data-id="${id}" class="edit-profile-button" onclick="editProfile(this.getAttribute('data-id'))">
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em"
+                     width="1em" xmlns="http://www.w3.org/2000/svg">
+                    <path fill="none" d="M0 0h24v24H0V0z"></path>
+                    <path d="M14.06 9.02l.92.92L5.92 19H5v-.92l9.06-9.06M17.66 3c-.25 0-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83a.996.996 0 000-1.41l-2.34-2.34c-.2-.2-.45-.29-.71-.29zm-3.6 3.19L3 17.25V21h3.75L17.81 9.94l-3.75-3.75z"></path>
+                </svg>
+                <span>수정</span>
+            </button>
+
         </div>
         <div class="myScrap">
             <p>내 스크랩</p>
