--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -7,14 +7,25 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid black;
+}
+#home-button {
+    margin-left: 45px;
+    width: 56px;
+    height: 36px;
+    font-size: 10px;
+    background-color: coral;
+    color: #ffffff;
+    font-weight: bold;
+    border: 0px;
+    cursor: pointer;
 }
 #header-user {
     float:right;
     font-weight: bold;
-
 }
-
 #logout-button {
+    margin-right: 45px;
     float:right;
     width: 56px;
     height: 36px;
@@ -27,31 +38,49 @@
 }
 
 .tool-bar {
-    display: block;
-    box-sizing: border-box;
+    position: sticky;
+    top: 6rem;
+    height: calc(100vh - 6rem);
+    display: flex;
     flex-direction: column;
-    border: 2px solid;
+    -webkit-flex-direction: column;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    background-color: #ffffff;
+    border-right: 1px solid black;
+    width: 200px;
 }
-
+.nav-li {
+    margin: 0;
+    box-sizing: border-box;
+    display: block;
+    line-height: 50px;
+    font-size: 1.3rem;
+    list-style-type: none;
+}
+ul {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
 .profile-content {
-    text-align: center;
-    flex-direction: row;
+    position: absolute;
+    top: 20%;
+    left: 30%;
+    transform: translate(-30%, -20%);
 }
 .myProfile {
     font-weight: bold;
 }
 .myScrap {
     font-weight: bold;
-}
-#home-button {
-    width: 56px;
-    height: 36px;
-    font-size: 10px;
-    background-color: coral;
-    color: #ffffff;
-    font-weight: bold;
-    border: 0px;
-    cursor: pointer;
 }
 .edit-profile-button {
     width: 74px;
