--- a/src/main/resources/templates/lounge.html
+++ b/src/main/resources/templates/lounge.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <script src="/js/home.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/home.css">
-    <title>SC | 스터디 커뮤니티</title>
+    <title>SC | 라운지</title>
 </head>
 <body>
 <div class="wrap">
